Fix LightCapabilities collection inspection; add tests
Made-with: Cursor